# metar-lib

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
examples/: simple.rs  simple_cli.rs
metars/: KSFO.TXT  KSJC.TXT
src/: bin.rs  error.rs  lib.rs
tests/: parser.rs
