[package]
name = "metar-cli"
version = "0.1.0"
authors = ["smehlhoff"]
edition = "2018"

[dependencies]
chrono = "0.4.11"
lazy_static = "1.4.0"
regex = "1.3.9"
reqwest = { version = "0.10.6", features = ["blocking"] }

[lib]
name = "metar_cli"
path = "src/lib.rs"

[[bin]]
name = "bin"
path = "src/bin.rs"