[package]
name = "metar-lib"
version = "0.1.0"
authors = ["smehlhoff"]
description = "Parses latest METARs from NOAA Aviation Weather Center IAW FCM-H1-2019"
repository = "https://github.com/smehlhoff/metar-lib"
keywords = ["weather", "metar", "aviation"]
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
chrono = "0.4.11"
lazy_static = "1.4.0"
regex = "1.3.9"
reqwest = { version = "0.11.4", features = ["blocking"] }

[lib]
name = "metar_lib"
path = "src/lib.rs"